--- a/Problem0004/Problem0004.fsproj
+++ b/Problem0004/Problem0004.fsproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net9.0</TargetFramework>
+        <RootNamespace>Problem4</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
