--- a/Problem0006/Problem0006.fsproj
+++ b/Problem0006/Problem0006.fsproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net9.0</TargetFramework>
+        <RootNamespace>Problem6</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
